# medi-rs

./: .gitignore  Cargo.toml  Changelog.md  Justfile  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: cd.yml
.github/workflows/: cd.yml  ci.yml
src/: bus.rs  common.rs  error.rs  lib.rs  traits.rs
src-macros/: Cargo.toml
src-macros/src/: functions.rs  lib.rs
src/bus/: bus.rs  bus_builder.rs  mod.rs
src/event/: mod.rs
src/handler/: handler_error.rs  handler_wrapper.rs  macros.rs  mod.rs
src/resource/: error.rs  from_resources.rs  mod.rs  resources.rs  resources_builder.rs
tests/: 01_test_ping_pong_request_response.rs  02_test_duration_request_response.rs  03_test_request_with_resource.rs  04_test_dependency_injection.rs  05_test_error_handling.rs  06_test_bus_as_resource.rs  07_test_event.rs  08_test_async_dependency.rs  09_test_command_return_types.rs  simple_ping_pong_request_response.rs  test_command_with_resource.rs  test_duration_request_response.rs  test_ping_pong_request_response.rs
