[package]
name = "medi-rs-macros"
description = "A macro library for medi-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[lints]
workspace = true

[lib]
proc-macro = true
